@@ -2301,3 +2301,7 @@ Added -o* option to rtpict to produce layered images that handle most
 output types from rtrace (colors, surface normals, distances, IDs).
 
 Created rcode2bmp script to create images from new rcode_* output maps.
+
+Improved efficiency of rmtxop in cases where matrix multiplication is
+faster evaluated right-to-left, as when the final component is a
+column vector.
